fixedBanner z-index:10

--- a/css/booster.css
+++ b/css/booster.css
@@ -531,7 +531,7 @@ body {
   position: fixed;
   bottom: 20px;
   width: 100%;
-  z-index: 3;
+  z-index: 10;
   transition: opacity 0.3s ease;
 }
 
